Actualización general MidTerm

--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -99,18 +99,24 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Software Creativo</h1>
-         <p>Post en proceso</p>
+         <p>Listado de softwares que recomiendo totalmente por su cómoda interfaz y uso.</p>
 <h6 id="lista-de-softwares">Lista de softwares</h6>
 <p><img src="/img/procreate.jpg" alt="banner"></p>
 <p><a href="https://procreate.art/">Procreate</a> - Dibujo digital y análogo.</p>
 <h1 id="img-srcimgprocreatejpghttpsprocreateart"><a href="https://procreate.art/"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
-<li>Esta aplicación es exclusiva de apple y está diseñada como una herramienta del ipad + el Apple Pencil. Lo que más destaco es la comodidad de portar el dispositivo con la aplicación como si fuera una croquera en la que puedes dibujar en cualquier momento y en cualquier lugar. Los atajos gestuales son muy útiles y dinámicos para dibujar de la mejor manera para técnicas análogas y digitales.</li>
+<li>Esta aplicación es exclusiva de apple y está diseñada como una herramienta del ipad + el Apple Pencil. Lo que más destaco es la comodidad de portar el dispositivo con la aplicación como si fuera una croquera en la que puedes dibujar en cualquier momento y en cualquier lugar. Los atajos gestuales son muy útiles y dinámicos para dibujar de la mejor manera con técnicas análogas y digitales.</li>
 <li>Procreate está pensado para artistas, ilustradores y diseñadores. Se le puede aprovechar en su mayor potencial con la precisión que otorga el Apple Pencil, un dispositivo extra que entrega una experiencia más real y parecida al dibujo tradicional.</li>
 </ul>
 </blockquote>
-<p>&mdash;[Video en proceso de edición]&mdash;</p>
+<p><em>En este video te enseñan lo básico para comenzar a trabajar en Procreate. Más que un tutorial, son tips para trabajar de la manera más cómoda posible con atajos gestuales y trucos.</em></p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/t5J7hMOS0NM" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+<hr>
 <p><img src="/img/sai.jpg" alt="banner"></p>
 <p><a href="http://www.mediafire.com/file/8v3b8115orc33m3/Paint_Tool_SAI_%2528bgm94%2529.rar/file">Paint Tool Sai</a> - Dibujo digital y análogo.</p>
 <h1 id="img-srcimgsaijpghttpwwwmediafirecomfile8v3b8115orc33m3paint_tool_sai_2528bgm942529rarfile"><a href="http://www.mediafire.com/file/8v3b8115orc33m3/Paint_Tool_SAI_%2528bgm94%2529.rar/file"><!-- raw HTML omitted --></a></h1>
@@ -121,7 +127,12 @@
 El potencial del Sai se puede aprovechar de mejor manera con una tableta gráfica. Yo recomiendo utilizar una Wacom u otra que se asemeje a la precisión que tiene en el lápiz.</li>
 </ul>
 </blockquote>
-<p>&mdash;[Video en proceso de edición]&mdash;</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/F1JzWHDgDfs" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+<hr>
 <p><img src="/img/zbrush.jpg" alt="banner"></p>
 <p><a href="https://www.zbrushcentral.com/">Zbrush</a> - Modelación 3D de personajes.</p>
 <h1 id="img-srcimgzbrushjpghttpswwwzbrushcentralcom"><a href="https://www.zbrushcentral.com/"><!-- raw HTML omitted --></a></h1>
@@ -131,7 +142,12 @@ El potencial del Sai se puede aprovechar de mejor manera con una tableta gráfic
 <li>Zbrush es una buena herramienta para modelar personajes o cuerpos orgánicos, ese es su fuerte.</li>
 </ul>
 </blockquote>
-<p>&mdash;[Video en proceso de edición]&mdash;</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/wfO9Htk0qrU" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+<hr>
 <p><img src="/img/videoleap.jpg" alt="banner"></p>
 <p><a href="http://videoleapapp.com/">Enlight Videoleap</a> - Edición de video portable.</p>
 <h1 id="img-srcimgvideoleapjpghttpvideoleapappcom"><a href="http://videoleapapp.com/"><!-- raw HTML omitted --></a></h1>
@@ -141,6 +157,10 @@ El potencial del Sai se puede aprovechar de mejor manera con una tableta gráfic
 <li>Lo que más me gusta de Videoleap es la interfaz simple que tiene. No tardarás en aprenderte todas las herramientas.</li>
 </ul>
 </blockquote>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/KpcbO1Cwj28" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
          
       </div>
     </div>
