--- a/portfolio/work12/index.html
+++ b/portfolio/work12/index.html
@@ -100,8 +100,44 @@
       <div class="content-column-content">
          <h1>Los equipamientos del futuro</h1>
          <p>Avances de propuesta conceptual de wearables que servirían como equipamientos en la vestimenta del futuro para circular en zonas de riesgo viral.</p>
-<p><img src="/img/lam1.jpg" alt="lam1">
-<img src="/img/lam2.jpg" alt="lam2"></p>
+<p>Desarollamos un proyecto basado en la investigación del COVID-19, relacionado a cómo ha influido fuertemente en factores de movilidad. El inicio de este proyecto comienza con la búsqueda de referentes y capacidades tecnológicas con las que cuenta actualmente la sociedad. Dichas referencias, poseen elementos que nos aproximan a un concepto de diseño que podría enfrentar eventualmente al virus. Mediante la mezcla definición de tecnologías, adaptadas a la problemática.</p>
+<p>Lo importante es plantearse preguntas y re-diseñar cómo van a funcionar los objetos de ahora en adelante. El tema de movilidad abre diversas aristas que nos obligan a re-plantear ciertas costumbres en nuestra rutina diaria. En esta ocasión se va a abordar el tema desde el uso de los Wearables como equipamiento en el futuro. Dicho esto nos planteamos las siguientes preguntas:</p>
+<ul>
+<li>¿Cuáles son los objetos clave en un entorno perjudicial para la salud?</li>
+<li>¿Cuál es el equipamiento indispensable para que la sociedad sobreviva y pueda desenvolverse en zonas de alto riesgo?</li>
+<li>¿Podemos realmente vivir sin salir de nuestras casas para siempre y trabajar desde las dichas?.</li>
+</ul>
+<hr>
+<hr>
+<h6 id="oportunidades">Oportunidades</h6>
+<p>Creemos que uno de los equipamientos que se pueden desarrollar, para solucionar el problema de movilidad limitada, es una máscara con funciones inteligentes, pensada para poder salir al exterior sin correr el riesgo de contagiarse con enfermedades virales. Esto se traduce en un wearable de uso temporal, es decir, que su función brinde al usuario movilidad y precaución para circular en zonas de riesgo viral. Nosotros planteamos un dispositivo que cuente con funciones automatizadas mediante el uso de tecnologías existentes, que pueden potenciar esta máscara. Dichas tecnologías serán mencionadas más adelante.</p>
+<p><img src="/img/perfilwearable.jpg" alt="versionmask1"></p>
+<p>Esta propuesta surge de la necesidad de las personas que no quieren desviarse de sus caminos o su necesidad de estar en una zona, por temas laborales o de cualquier ámbito. El recubrimiento de este wearable sería monitoreado por una placa inteligente que notifica los detalles en la pantalla de los lentes detalles como el procentaje de batería, probabilidad de riesgo para la salud y la duración del oxígeno al ser activado.</p>
+<hr>
+<hr>
+<h6 id="desarrollo-de-concepto---máscara-inteligente-antibacterial">Desarrollo de concepto - Máscara inteligente antibacterial</h6>
+<p>Durante el traslado o viaje el wearable comunica al usuario el riesgo de salud que corre respecto a la zona y el entorno que le rodea. Es decir, a medida que el usuario avanza en una zona, la tecnología detecta mediante sensores de calor la probabilidad de que en su entorno esté presente alguna persona portadora de virus, también toma en cuenta la base de datos de casos confirmados vs ubicación de estos.</p>
+<p><img src="/img/covidmaskescena1.jpg" alt="escena 1"></p>
+<p><img src="/img/covidmaskescena2.jpg" alt="escena 2"></p>
+<p>El wearable incluye una data sobre el virus, en territorios de la ciudad. Los lentes de la máscara permiten ver, además de la temperatura corporal, las superficies en donde se encuentra el virus, como medida preventiva en virtud de la sensibilidad de la máscara y de la percepción del usuario.
+Además de alertar visualmente al usuario, la máscara cuenta con un método de notificación del estado de la batería, oxígeno y proximidad de virus, mediante un aviso en el smartphone.</p>
+<p><img src="/img/tecnologiausada.jpg" alt="esquema 1">
+<img src="/img/visioncalor.jpg" alt="esquema 2"></p>
+<p>MODELO URBANO</p>
+<div>
+    <iframe src="https://myhub.autodesk360.com/ue2f8dcdc/shares/public/SH919a0QTf3c32634dcf31c49514740efcb7?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+</div>
+<p>El modelo urbano contiene cámara térmica, GPS y acceso a base de datos visibles en el lente inteligente para prevenir y evaluar el riesgo de salud del entorno del usuario.</p>
+<p>MODELO SOCIAL</p>
+<div>
+    <iframe src="https://myhub.autodesk360.com/ue2f8dcdc/shares/public/SH919a0QTf3c32634dcf2da32acfa80ad79a?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+</div>
+<p>El modelo Social cuenta con la misma base que el urbano pero también tiene la zona bocal traslucida para ser más fácil el socializar en especial para la gente sorda y muda, permite leer los labios y expresiones.</p>
+<p>MODELO INDUSTRIAL</p>
+<div>
+    <iframe src="https://myhub.autodesk360.com/ue2f8dcdc/shares/public/SH919a0QTf3c32634dcf92f83bb753d8ee9f?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+</div>
+<p>El modelo industrial cuenta con cámara térmica, GPS, acceso a base de datos (todo lo anterior es visible en los lentes) y además un macho para conectar una manguera de oxígeno a la máscara.</p>
          
       </div>
     </div>
